# config/packages/nelmio_api_doc.yaml
@@ -68,18 +68,22 @@ nelmio_api_doc:
                         type: string
                         required: true
                         description: 'Price of the item in "000.00" format'
-                    type:
+                        example: '100.00'
+                    productType:
                         type: string
                         required: true
                         description: 'Type of the product'
+                        example: 'shirt'
                     color:
                         type: string
                         required: true
                         description: 'Color of the product'
+                        example: 'blue'
                     size:
                         type: string
                         required: true
                         description: 'Size of the product'
+                        example: 'L'
             create_product_success:
                 type: object
                 properties:
@@ -103,7 +107,67 @@ nelmio_api_doc:
                         type: string
                         required: true
                         description: 'Size of the product'
-            create_product_invalid_arguments:
+            create_order:
+                type: object
+                properties:
+                    items:
+                        type: array
+                        required: true
+                        description: 'Order Items'
+                        items:
+                            type: array
+                            $ref: '#/definitions/order_item'
+            order_item:
+                type: object
+                properties:
+                    productId:
+                        type: string
+                        required: true
+                        description: 'UUID identifier of a product'
+                        example: 'bd32155a-c49b-51d3-9b27-9bf627967c51'
+                    quantity:
+                        type: integer
+                        required: true
+                        description: 'quantity of the item'
+                        example: 3
+            order_item_success:
+                type: object
+                properties:
+                    productId:
+                        type: string
+                        description: 'UUID identifier of a product'
+                        example: 'bd32155a-c49b-51d3-9b27-9bf627967c51'
+                    quantity:
+                        type: integer
+                        description: 'quantity of the item'
+                        example: 3
+                    price:
+                        type: string
+                        description: 'price of a single product from this item'
+                        example: '25.00'
+            create_order_success:
+                type: object
+                properties:
+                    id:
+                        type: string
+                        description: 'UUID of created Order'
+                        example: 'bd32155a-c49b-51d3-9b27-9bf627967c51'
+                    total:
+                        type: string
+                        description: 'Total cost of Order'
+                        example: '1350.50'
+                    items:
+                        type: array
+                        description: 'Order Items'
+                        items:
+                            type: array
+                            $ref: '#/definitions/order_item_success'
+            list_order_success:
+                type: array
+                items:
+                    type: array
+                    $ref: '#/definitions/create_order_success'
+            error_message:
                 type: object
                 properties:
                     code:
