# src/Model/Product/ProductRepositoryInterface.php
@@ -7,7 +7,7 @@ namespace KacperWojtaszczyk\PrintifyBackendHomework\Model\Product;
 
 interface ProductRepositoryInterface
 {
-    public function findOneById(ProductId $email): ?Product;
+    public function findOneById(ProductId $id): ?Product;
     public function findOneByTypeColorSize(ProductType $type, Color $color, Size $size): ?Product;
     public function save(Product $product): void;
 }
